--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">Java Puzzles</string>
     <string name="runCodeButton">Run</string>
+    <string name="commonTaskDescription">Program should work and "passed" variable should be true at the end.</string>
+
+    <string name="puzzle1title">1 - Long R shift</string>
+    <string name="puzzle1prompt">Operations &gt;&gt; and &gt;&gt;&gt; have different semantics.</string>
 
 </resources>
