--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Java Puzzles</string>
     <string name="runCodeButton">Run</string>
-    <string name="commonTaskDescription">Code execution should finish without exception and variable named \"passed\" should be true.</string>
+    <string name="commonTaskDescription">Provide console input below.
+        Code execution should finish without exception and variable named \"passed\" should be true.</string>
 
     <string name="puzzle1title">1. Bit shift</string>
     <string name="puzzle1prompt">Bit operations &gt;&gt; and &gt;&gt;&gt; have different semantics.</string>
