--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,6 @@
     <string name="puzzle0title">0. Tutorial</string>
     <string name="puzzle1title">1. Bit shift</string>
     <string name="puzzle2title">2. Double Float</string>
-    <string name="puzzle3title">3. Pending</string>
+    <string name="puzzle3title">3. iSquare</string>
 
 </resources>
