puzzle4 long pool

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="puzzle1title">1. Bit shift</string>
     <string name="puzzle2title">2. Double Float</string>
     <string name="puzzle3title">3. iSquare</string>
+    <string name="puzzle4title">4. Long ==</string>
+    <string name="puzzle5title">5. Penging </string>
 
 </resources>
