8,9 YYYY passed fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,8 @@
     <string name="puzzle5title">5. String bytes </string>
     <string name="puzzle6title">6. Reverse</string>
     <string name="puzzle7title">7. Regex</string>
-    <string name="puzzle8title">8.  TBD</string>
-    <string name="puzzle9title">9.  TBD</string>
+    <string name="puzzle8title">8. Date format </string>
+    <string name="puzzle9title">9. Date for mad</string>
     <string name="puzzle10title">10. TBD </string>
     <string name="puzzle11title">10. TBD </string>
     <string name="puzzle12title">11. TBD </string>
