--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,16 +28,16 @@
     <string name="puzzle7title">7. Regex</string>
     <string name="puzzle8title">8. Date format </string>
     <string name="puzzle9title">9. Date for mad</string>
-    <string name="puzzle10title">10. TBD </string>
-    <string name="puzzle11title">10. TBD </string>
-    <string name="puzzle12title">11. TBD </string>
-    <string name="puzzle13title">12. TBD </string>
-    <string name="puzzle14title">13. TBD </string>
-    <string name="puzzle15title">14. TBD </string>
-    <string name="puzzle16title">15. TBD </string>
-    <string name="puzzle17title">16. TBD </string>
-    <string name="puzzle18title">17. TBD </string>
-    <string name="puzzle19title">18. TBD </string>
+    <string name="puzzle10title">10. Timezone </string>
+    <string name="puzzle11title">11. TBD </string>
+    <string name="puzzle12title">12. TBD </string>
+    <string name="puzzle13title">13. TBD </string>
+    <string name="puzzle14title">14. TBD </string>
+    <string name="puzzle15title">15. TBD </string>
+    <string name="puzzle16title">16. TBD </string>
+    <string name="puzzle17title">17. TBD </string>
+    <string name="puzzle18title">18. TBD </string>
+    <string name="puzzle19title">19. TBD </string>
 
 
 </resources>
